<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- This is the app's name, translators please do not translate and put in the same text as English version. Developers can consider putting in their own translation, this string must be changed before publishing -->
    <string name="app_name" translatable="false">Best Sticker App</string>

    <string name="new_update_available" translatable="false">Nova atualização disponível!</string>
    <string name="new_optional_update_text" translatable="false">A atualização não é obrigatória, porém recomendo fortemente baixar e instalar as atualizações disponibilizadas.\n\nCom o aplicativo na versão mais recente, menor a chance de você encontrar bugs no nele! :)</string>
    <string name="new_mandatory_update_text" translatable="false">A atualização é <b>obrigatória</b>, sem ela você não pode usar o aplicativo. Algum bug que compromete a segurança ou a utilização de funcionalidades essenciais foi resolvido!</string>
    <string name="optional_version_name" translatable="false">Versão %s</string>
    <string name="mandatory_version_name" translatable="false">Versão %s - obrigatória</string>
    <string name="version" translatable="false">Versão %s</string>
    <string name="changes" translatable="false">Ajustes:</string>
    <string name="update_activity_open_code_github" translatable="false">"Ao clicar nesse botão, você baixará um arquivo .apk contendo a nova atualização. O código fonte é aberto, você pode ter acesso caso queira em: "</string>
    <string name="github_project_link" translatable="false">https://github.com/miguel-teles/bestStickerApp</string>
    <string name="download_update" translatable="false">BAIXAR ATUALIZAÇÃO</string>
    <string name="no_secure_token_found" translatable="false">SecureToken não foi encontrado</string>
    <string name="no_api_endpoint_found" translatable="false">API endpoint não foi encontrado</string>
    <string name="installing_new_version_text2" translatable="false">Diferente da Google Play que baixa a atualização automaticamente sem necessidade de uma nova instalação, este aplicativo precisa que a nova versão seja instalada. Isso acontece porque este app não consegue baixar somente os trechos de código atualizados, coisa que a Google Play faz.</string>
    <string name="installing_new_version_text1" translatable="false">Para prosseguir com a atualizaçãp, é preciso instalar a nova versão recém baixada. Já que este aplicativo não é distribuído via Google Play, o processo de atualização do Best Sticker App é totalmente gerenciado por ele mesmo.</string>
    <string name="installing_new_version_title" translatable="false">Instalar a nova versão</string>
    <string name="installing_new_version_text3" translatable="false">Para que o Best Sticker App possa instalar a nova versão por você, é necessário que você permita que este possa \'\'instalar apps desconhecidos\'\'.</string>
    <string name="give_permission_here" translatable="false">Dê permissão aqui!</string>
    <string name="not_allowed" translatable="false">Não permitido :(</string>
    <string name="allowed" translatable="false">Permitido :D</string>
    <string name="skip_already_downloaded" translatable="false">Já baixado, próxima etapa!</string>
    <string name="install_version" translatable="false">Instalar nova versão</string>

    <!-- Content description for the sticker pack tray image -->
    <string name="tray_image_content_description" translatable="false">Miniatura de pacote de figurinhas</string>
    <!-- Text to be shown on the button that user can click to add the sticker pack to WhatsApp -->
    <string name="add_to_whatsapp" translatable="false">Adicionar ao WhatsApp</string>

    <!-- Message to show in a dialog when user fails to add sticker pack -->
    <string name="add_pack_fail_prompt_update_whatsapp" translatable="false">Não foi possível adicionar o pacote de figurinhas. Se você quiser adicioná-lo, certifique-se de atualizar o WhatsApp para a última versão.</string>
    <!-- Text in dialog button when a user has an old version of WhatsApp that prevents them from adding the sticker pack, clicking on it will take user to play store -->
    <string name="add_pack_fail_prompt_update_play_link" translatable="false">Atualizar</string>
    <!-- Toast text when we could not take user to play store because they don't have Google Play app installed -->
    <string name="cannot_find_play_store" translatable="false">O Google Play não foi instalado no aparelho.</string>

    <string name="defaultPublisher" translatable="false">Aplicativo de figurinhas - Miguel Teles</string>
    <string name="sticker_pack_image" translatable="false">Imagem do pacote</string>
    <string name="not_enough_stickers_to_add_to_whatsapp" translatable="false">É necessário que o pacote tenha pelo menos três figurinhas</string>

    <!-- Content description indicating the sticker pack is an animated pack -->
    <string name="sticker_pack_animation_indicator" translatable="false">Pacote de figurinhas animadas</string>
    <!-- text we display at the end of sticker pack details page showing that users can tap sticker to see bigger version -->
    <string name="sticker_pack_details_tap_to_preview" translatable="false">Toque para visualizar a figurinha</string>


    <string name="details_pack_already_added" translatable="false">Pacote já foi adicionado! Para refletir alterações feitas, é necessário atualizar o pacote no WhatsApp.</string>

    <!-- Exception enums   -->
    <string name="MKDIR" translatable="false">Erro ao criar pasta</string>
    <string name="MKFILE" translatable="false">Erro ao criar arquivo</string>
    <string name="MKDIR_LOG" translatable="false">Erro ao criar pasta de logs</string>
    <string name="MKDIR_LOG_ERRORS" translatable="false">Erro ao criar pasta de logs de erro</string>
    <string name="MKDIR_LOG_CRITICAL_ERRORS" translatable="false">Erro ao criar pasta de logs de erros críticos</string>
    <string name="MKDIR_PACKS" translatable="false">Erro ao criar pasta de pacote(s)</string>
    <string name="GET_PATH" translatable="false">Erro ao encontrar local do arquivo</string>
    <string name="GET_FOLDER" translatable="false">Erro ao acessar pasta</string>
    <string name="GET_FILE" translatable="false">Erro ao abrir arquivo</string>
    <string name="GET_FILE_TYPE" translatable="false">Erro ao definir o tipo do arquivo</string>
    <string name="CREATE_FOLDER_PACOTE" translatable="false">Erro ao criar pasta do pacote de figurinhas</string>
    <string name="COPY" translatable="false">Erro ao copiar arquivo ao destino novo</string>
    <string name="RESIZE" translatable="false">Erro ao mudar tamanho da imagem</string>
    <string name="FILE_NOT_FOUND" translatable="false">Arquivo não encontrado</string>
    <string name="DELETE_FOLDER" translatable="false">Erro ao apagar pasta</string>
    <string name="CONVERT_FILE" translatable="false">Erro ao converter arquivo</string>
    <string name="DOWNLOAD" translatable="false">Erro ao baixar arquivo</string>
    <string name="CREATE_STICKER_PACK" translatable="false">Erro criar novo pacote de figurinhas</string>
    <string name="CREATE_STICKER" translatable="false">Erro criar nova figurinha</string>
    <string name="EDIT_STICKER_PACK" translatable="false">Erro ao editar pacote de figurinhas</string>
    <string name="SURE_DELETE_STICKER_PACK" translatable="false">Tem certeza que quer excluir este pacote?</string>
    <string name="YES_SIR" translatable="false">Sim!</string>
    <string name="NOT_TODAY" translatable="false">Hoje não...</string>
    <string name="SELECT_A_PICTURE_FOR_PACK" translatable="false">Imagem do pacote (se vazio, será um macaco)</string>
    <string name="SELECT_A_PICTURE_FOR_STICKER" translatable="false">Selecione uma imagem</string>
    <string name="WARN_WRONG_TYPE_STICKER_PACK" translatable="false">Este pacote não aceita este tipo de figurinha. Todas as figurinhas do pacote precisam ser do mesmo tipo: animada ou padrão (estática).</string>
    <string name="ADD_STICKER" translatable="false">ADICIONAR FIGURINHAS</string>
    <string name="ADD_PACK" translatable="false">CRIAR PACOTE</string>
    <string name="SAVE_PACK" translatable="false">SALVAR PACOTE</string>
    <string name="FETCH_STICKER" translatable="false">Erro ao buscar figurinhas</string>
    <string name="FETCH_STICKER_PACK" translatable="false">Erro ao buscar pacote de figurinhas</string>
    <string name="INVALID_STICKER_PACK" translatable="false">Pacote de figurinhas inválido</string>
    <string name="POST" translatable="false">Erro ao executar HTTP POST</string>
    <string name="NO_INTERNET_ACCESS" translatable="false">É preciso estar conectado a internet para acessar essa funcionalidade</string>
    <string name="DOWNLOAD_UPDATE_EXCEPTION" translatable="false">Erro ao baixar a atualização do app</string>
    <string name="GET_UPDATE_LINK" translatable="false">Erro ao buscar link da atualização</string>
    <string name="NOT_DEFINED_EXCEPTION" translatable="false">Erro não definido capturado</string>
    <string name="WRONG_TYPE_STICKER_PACK" translatable="false">Este pacote de figurinhas não permite esse tipo de figurinha</string>
    <string name="INVALID_DOWNLOAD_LINK" translatable="false">Link de download é inválido</string>
    <string name="TIMEOUT" translatable="false">Timeout, que chato!</string>
    <string name="IS_STICKER_PACK_ANIMATED" translatable="false">É para figurinhas animadas?</string>
    <string name="CONVERTION_TIME_OUT" translatable="false">Figurinha não foi convertida a tempo para baixá-la. Tente novamente.</string>
    <string name="WARN_FILE_BIGGER_THAN_ALLOWED" translatable="false">Wow! Arquivo grande demais para transformar em figurinha.</string>
    <string name="WARN_DURATION_OF_VIDEO" translatable="false">O vídeo pode ser cortado, pois a duração máxima de uma figurinha animada é de 10 segundos.</string>
    <string name="how_to_update_stickerpack">Como atualizar o pacote de figurinhas no WhatsApp</string>
    <string name="how_to_update">Antigamente, só era necessário abrir e fechar o WhatsApp ou até mesmo sair e entrar de alguma conversa. Atualmente (texto feito em 29 de Junho de 2026), existe um botão que atualiza um pacote específico:</string>
</resources>
