<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    android:paddingBottom="25dp"
    android:paddingTop="32dp">

    <TextView
        android:id="@+id/txt_update_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txt_update_activity_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:justificationMode="inter_word"
        android:text="Olá! Nessa versão eu ajustei alguns bugs que foram reportados via API." />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:background="@drawable/shape_card_default"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changes">

            </TextView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:scrollbars="none">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/changesList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray"
        android:text="@string/update_activity_open_code_github" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_project_link"
        android:autoLink="web" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/btn_download_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_btn_default"
            android:ellipsize="end"
            android:gravity="center"
            android:clickable="true"
            android:singleLine="true"
            android:text="@string/download_update"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:translationZ="10dp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/pgb_download_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="50dp"
            style="@style/ProgressBarHorizontal"
            android:max="100"
            android:translationZ="0dp"
            android:visibility="invisible" />
    </FrameLayout>


</LinearLayout>