<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/SELECT_A_PICTURE_FOR_STICKER"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/frame_sticker_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <FrameLayout
        android:id="@+id/frame_sticker_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_pick_image_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sticker_3rdparty_add"
            android:scaleType="centerInside" />

        <androidx.media3.ui.PlayerView
            android:id="@+id/sticker_playerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/sticker_gifimageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/sticker_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/sticker_playerview_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

    </FrameLayout>

    <TextView
        android:id="@+id/txt_warning_add_sticker"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/WARN_WRONG_TYPE_STICKER_PACK"
        android:textSize="12sp"
        android:justificationMode="inter_word"
        app:layout_constraintBottom_toTopOf="@+id/pg_sticker_creation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/pg_sticker_creation"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_adicionar_sticker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_adicionar_sticker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_btn_default_disabled"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/ADD_STICKER"
        android:textAllCaps="true"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>